--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "watch": "gulp watch"
     },
     "author": "",
-    "license": "ISC",
+    "license": "GPLv3",
     "devDependencies": {
         "bluebird": "^2.9.5",
         "browserify": "^8.1.3",
